k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phone-book
  labels:
    name: phone-book
    environment: production
